--- a/downloads.html
+++ b/downloads.html
@@ -221,7 +221,7 @@
       </div>
       <div class="card">
         <h3>O-Level Results Template</h3>
-        <a href="demo/olevel-template.xlsx" download>Download Excel Demo</a>
+        <a href="FORM TWO RESULTS TEMPLATE.xlsx" download>Download Excel Demo</a>
       </div>
       <div class="card">
         <h3>A-Level Results Template</h3>
@@ -233,7 +233,7 @@
       </div>
       <div class="card">
         <h3>Courses Discriptions</h3>
-        <a href="demo/olevel-template.xlsx" download>Download PDF</a>
+        <a href="NK ACADEMY.pdf" download>Download PDF</a>
       </div>
       <div class="card">
         <h3>Students' Results Management Using Excel (More Explanations)</h3>
