--- a/work with us.html
+++ b/work with us.html
@@ -181,7 +181,7 @@
     <p>
       If you’re interested in volunteering with us or building your portfolio, click below to apply. It is very simple!
     </p>
-    <a class="apply-btn" href="https://forms.gle/your-google-form-link" target="_blank">Apply Now</a>
+    <a class="apply-btn" href="https://forms.cloud.microsoft/r/a1JnPEE4hk" target="_blank">Apply Now</a>
   </section>
 
   <!-- Footer -->
